Utworzenie aplikacji webowej

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -7,4 +7,8 @@
     <StartupObject />
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Vavatech.RazorPages.Models\Vavatech.RazorPages.Models.csproj" />
+  </ItemGroup>
+
 </Project>
