--- a/Vavatech.RazorPages.IRepositories/Vavatech.RazorPages.IRepositories.csproj
+++ b/Vavatech.RazorPages.IRepositories/Vavatech.RazorPages.IRepositories.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Vavatech.RazorPages.Models\Vavatech.RazorPages.Models.csproj" />
+  </ItemGroup>
+
 </Project>
