--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vavatech.RazorPages.InMemoryRepositories\Vavatech.RazorPages.InMemoryRepositories.csproj" />
+    <ProjectReference Include="..\Vavatech.RazorPages.IRepositories\Vavatech.RazorPages.IRepositories.csproj" />
     <ProjectReference Include="..\Vavatech.RazorPages.Models\Vavatech.RazorPages.Models.csproj" />
   </ItemGroup>
 
