--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Vavatech.RazorPages.FakeRepositories\Vavatech.RazorPages.FakeRepositories.csproj" />
     <ProjectReference Include="..\Vavatech.RazorPages.InMemoryRepositories\Vavatech.RazorPages.InMemoryRepositories.csproj" />
     <ProjectReference Include="..\Vavatech.RazorPages.IRepositories\Vavatech.RazorPages.IRepositories.csproj" />
