--- a/Vavatech.RazorPages.FakeRepositories/Vavatech.RazorPages.FakeRepositories.csproj
+++ b/Vavatech.RazorPages.FakeRepositories/Vavatech.RazorPages.FakeRepositories.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="33.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
