--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ShopConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ShopDb;Integrated Security=True;Application Name=Shop"
+  }
 }
